--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                     <img src="image/banner-static1.png" alt="imagebanner-image">
                 </figure>
                 <div class="banner-statics-parts-content">
-                    <h5>NEW ARRIVALS</h5>
+                    <h5>NEW<br> ARRIVALS</h5>
                     <h2>Pearl <br> Necklaces</h2>
                     <a href="#">Shop Now</a>
                 </div>
@@ -669,7 +669,7 @@
        <!-- ************************Start of Group product******************** -->
         <section class="group-product">
             <div class="container">
-                <div class="group-product-part1" data-aos="fade-right" data-aos-delay="300">
+                <div class="group-product-part1">
                     <img src="image/group-product-banner.png" alt="imageproduct-image">
                     <div class="group-product1-content">
                         <h6>BEAUTIFUL</h6>
@@ -677,7 +677,7 @@
                         <a href="#">Shop now</a>
                     </div>
                 </div>
-                <div class="group-product-part2" data-aos="fade-left" data-aos-delay="300">
+                <div class="group-product-part2">
                     <div class="group-product-content">
                             <div class="group-product-title">
                                 <h4>Best Seller product</h4>
